[tool.poetry]
name = "python-sandbox"
version = "0.1.0"
description = ""
authors = ["inokawa <48897392+inokawa@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^2.7"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
